--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      />
  
      <!-- CUSTOM STYLES -->
-     <link rel="stylesheet" href="css/styles.css">
+     <link rel="stylesheet" href="CSS/styles.css">
 
       
     <style>
