--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Katrina Carla Diaz">
     <meta name="keywords" content="Teashop, KDTeashop, Milktea">
     <meta name="description" content="KD-Teashop Landding Page">
-    <title>Landin Page</title>
+    <title>Tea Shop</title>
      <!-- Animate.style -->
      <link
      rel="stylesheet"
