--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <!-- SECTION1 -->
             <section>
                 <h2>Tea</h2>
+                <img class="teaIcon animate__animated animate__wobble" src="https://github.com/KG-2023/Activity-Images-2023/blob/main/rodrigoBonzerrLopez-tea-icon.png?raw=true" alt="Tea icon image">
                 <article class="teaItem">
                     <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
                 </article>
